--- a/FPS Counter/manifest.json
+++ b/FPS Counter/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/nike4613/ModSaber-MetadataFileSchema/master/Schema.json",
-  "author": "",
-  "description": "",
-  "gameVersion": "0.12.2",
-  "id": null,
+  "author": "Steven 🎀",
+  "description": "A Beat Saber mod to show your fps in-game.",
+  "gameVersion": "1.1.0p1",
+  "id": "FPS Counter",
   "name": "FPS Counter",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "features": []
 }
