--- a/FPS Counter/manifest.json
+++ b/FPS Counter/manifest.json
@@ -6,5 +6,9 @@
   "id": "FPS Counter",
   "name": "FPS Counter",
   "version": "0.0.1",
-  "features": []
+  "dependsOn": {
+    "CustomUI": "^1.5.11",
+    "BS Utils": "^1.3.6"
+  },
+  "loadAfter": [ "Counters+" ]
 }
