--- a/FPS Counter/FPS Counter.csproj
+++ b/FPS Counter/FPS Counter.csproj
@@ -95,6 +95,9 @@
   <ItemGroup>
     <EmbeddedResource Include="manifest.json" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetPath)" "Z:\SteamLibrary\steamapps\common\Beat Saber\Plugins"</PostBuildEvent>
