--- a/FPS Counter/manifest.json
+++ b/FPS Counter/manifest.json
@@ -2,10 +2,11 @@
   "$schema": "https://raw.githubusercontent.com/nike4613/ModSaber-MetadataFileSchema/master/Schema.json",
   "author": "Steven 🎀",
   "description": "A Beat Saber mod to show your fps in-game.",
-  "gameVersion": "1.1.0p1",
+  "gameVersion": "1.2.0",
   "id": "FPS Counter",
+  "icon":  "FPS_Counter.Resources.icon.png",
   "name": "FPS Counter",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "dependsOn": {
     "CustomUI": "^1.5.11",
     "BS Utils": "^1.3.6"
